Opened 14 years ago

Closed 14 years ago

#2081 closed defect (fixed)

Some MOV chapters parsing broken since 0d96ec1

Reported by: Cigaes Owned by: Clément Bœsch
Priority: important Component: avformat
Version: unspecified Keywords: mov chapters regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: yes

Description

With the attached sample:

./ffmpeg_g -i /tmp/chapters.mov

Expected (truncated) outout:

Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '/tmp/chapters.mov':
  Metadata:
    major_brand     : qt  
    minor_version   : 537199360
    compatible_brands: qt  
    creation_time   : 2012-12-24 00:08:45
  Duration: 00:21:21.96, start: 0.000000, bitrate: 3 kb/s
    Chapter #0.0: start 0.000000, end 0.480000
    Metadata:
      title           : 
    Stream #0:0(eng): Video: h264 (avc1 / 0x31637661), 640x480, 1694 kb/s, 25 fps, 25 tbr, 2500 tbn, 5k tbc

Actual output:

Input #0, mov,mp4,m4a,3gp,3g2,mj2, from '/tmp/chapters.mov':
  Metadata:
    major_brand     : qt  
    minor_version   : 537199360
    compatible_brands: qt  
    creation_time   : 2012-12-24 00:08:45
  Duration: 00:21:21.96, start: 0.000000, bitrate: 3 kb/s
    Stream #0:0(eng): Video: h264 (avc1 / 0x31637661), 640x480, 1694 kb/s, 25 fps, 25 tbr, 2500 tbn, 5k tbc

Notice the chapter just after "duration". The change comes from the following commit:
0d96ec1 mov: parse tref atom.
Reverting it (or just replacing mov_read_tref with mov_read_default in libavformat/mov.c:mov_default_parse_table restores the correct behaviour (but certainly breaks the feature it was adding).

Attachments (1)

chapters.mov (512.0 KB ) - added by Cigaes 14 years ago.

Download all attachments as: .zip

Change History (3)

by Cigaes, 14 years ago

Attachment: chapters.mov added

comment:1 by Clément Bœsch, 14 years ago

Owner: set to Clément Bœsch
Status: newopen

comment:2 by Clément Bœsch, 14 years ago

Resolution: fixed
Status: openclosed

Fixed by Hendrik in 765158dd.

Some cleanups are left to do (working on), but ticket can be closed. Thanks for the report.

Note: See TracTickets for help on using tickets.